--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,13 @@
 # Builds and deploys the documentation on updates
+# NOTE: This workflow relies on the two branches not to change names. In case of
+# a name change, change this workflow as well!
 name: Build
 
 on:
   push:
     branches:
       - master
+      - staging
 
 jobs:
   build:
@@ -29,6 +32,7 @@ jobs:
 
     # Deploy to the server
     - name: Deploy to production
+      if: github.ref_name == 'master'
       uses: easingthemes/ssh-deploy@v2.0.7
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
@@ -37,3 +41,13 @@ jobs:
         REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
         REMOTE_USER: ${{ secrets.REMOTE_USER }}
         TARGET: ${{ secrets.TARGET }}
+    - name: Deploy to staging
+      if: github.ref_name == 'staging'
+      uses: easingthemes/ssh-deploy@v2.0.7
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        ARGS: "-vzhr"
+        SOURCE: "build/"
+        REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+        REMOTE_USER: ${{ secrets.REMOTE_USER }}
+        TARGET: ${{ secrets.TARGET_STAGING }}
