--- a/config/fr.yml
+++ b/config/fr.yml
@@ -60,6 +60,7 @@ nav:
   - FAQ: faq.md
 theme:
   name: readthedocs
+  locale: fr
   custom_dir: ../theme_override
   highlightjs: True
   prev_next_buttons_location: both
@@ -69,6 +70,7 @@ theme:
     - yaml
     - tex
 markdown_extensions:
+  - def_list
   - toc:
       permalink: True
 plugins:
