--- a/config/it.yml
+++ b/config/it.yml
@@ -45,6 +45,7 @@ nav:
   - FAQ: faq.md
 theme:
   name: readthedocs
+  locale: it
   custom_dir: ../theme_override
   highlightjs: True
   prev_next_buttons_location: both
@@ -54,8 +55,9 @@ theme:
     - yaml
     - tex
 markdown_extensions:
+    - def_list
     - toc:
         permalink: True
 plugins:
   - search:
-      lang: en
+      lang: it
