--- a/config/ja.yml
+++ b/config/ja.yml
@@ -57,6 +57,7 @@ nav:
     - スペルチェック: reference/spell-checking.md
 theme:
   name: readthedocs
+  locale: jp
   custom_dir: ../theme_override
   highlightjs: True
   prev_next_buttons_location: both
@@ -66,6 +67,7 @@ theme:
     - yaml
     - tex
 markdown_extensions:
+    - def_list
     - toc:
         permalink: True
 plugins:
