--- a/config/en.yml
+++ b/config/en.yml
@@ -16,7 +16,6 @@ nav:
   - Getting Started:
     - Setup: getting-started/setup.md
     - Migrating to a New Computer: getting-started/migrating.md
-    - Portable App: getting-started/portable.md
     - Installing LaTeX: getting-started/installing-latex.md
     - A Note on Security: getting-started/a-note-on-security.md
     - Get involved: getting-started/get-involved.md
@@ -52,8 +51,9 @@ nav:
     - Zettelkasten Methods: academic/zkn-method.md
     - Graph View: academic/graph.md
   - Guides:
-    - Presentations: guides/presentations.md
     - LanguageTool Locally: guides/languagetool-local.md
+    - Presentations: guides/presentations.md
+    - Portable App: guides/portable.md
   - References:
     - FAQ: reference/faq.md
     - Keyboard Shortcuts: reference/keyboard-shortcuts.md
@@ -62,6 +62,7 @@ nav:
     - Spell Checking: reference/spell-checking.md
 theme:
   name: readthedocs
+  locale: en
   custom_dir: ../theme_override
   highlightjs: True
   prev_next_buttons_location: both
@@ -71,6 +72,7 @@ theme:
     - yaml
     - latex
 markdown_extensions:
+    - def_list
     - toc:
         permalink: True
 plugins:
