--- a/config/en.yml
+++ b/config/en.yml
@@ -30,6 +30,7 @@ nav:
     - Split View: core/split-view.md
     - Writing Markdown: core/writing-markdown.md
     - Style and Grammar: core/style-and-grammar.md
+    - Statusbar: core/statusbar.md
     - AutoCorrect and MagicQuotes: core/autocorrect.md
     - Citations: academic/citations.md
     - Math: core/math.md
