--- a/config/en.yml
+++ b/config/en.yml
@@ -30,6 +30,7 @@ nav:
     - Split View: core/split-view.md
     - Sidebar: core/sidebar.md
     - Writing Markdown: core/writing-markdown.md
+    - Working With Comments: core/comments.md
     - Style and Grammar: core/style-and-grammar.md
     - Readability: core/readability.md
     - Statusbar: core/statusbar.md
