--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,8 @@ jobs:
     # For setup, see https://www.mkdocs.org/#installation
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0 # Needed for the revisions plugin to work
     - name: Set up Python 3.10
       uses: actions/setup-python@v5
       with:
@@ -22,6 +24,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install mkdocs
+        pip install mkdocs-git-revision-date-localized-plugin
         
     # Now we can build the thing
     - name: Build the documentation
