fix: Ensure other locales do not fail to build after merge

--- a/config/it.yml
+++ b/config/it.yml
@@ -61,3 +61,9 @@ markdown_extensions:
 plugins:
   - search:
       lang: it
+  - git-revision-date-localized
+validation:
+  omitted_files: warn
+  absolute_links: warn  # Or 'relative_to_docs' - new in MkDocs 1.6
+  unrecognized_links: warn
+  anchors: warn  # New in MkDocs 1.6
